tests/spec/fail/timeout_non_int.aja
ch = chan()
select:
    case timeout("5"):
        print("x")
